# cookiecutter-catkin-package

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: CMakeLists.txt  cookiecutter.json  package.xml
{{cookiecutter.package_name}}/include/{{cookiecutter.package_name}}/: {{cookiecutter.class_name_snake_case}}.h  {{cookiecutter.class_name_snake_case}}.hpp
{{cookiecutter.package_name}}/src/: {{cookiecutter.class_name_snake_case}}.cc
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: {{cookiecutter.class_name_snake_case}}.cpp
{{cookiecutter.package_name}}/test/: test_{{cookiecutter.package_name}}.cc
