<?xml version="1.0"?>
<package format="2">
  <name>{{cookiecutter.package_name}}</name>
  <version>0.1.0</version>
  <description>{{cookiecutter.package_short_description}}</description>
  <maintainer email="{{cookiecutter.maintainer_email}}">{{cookiecutter.maintainer_name}}</maintainer>
  <license>{{cookiecutter.license}}</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>arc_build</build_depend>
</package>
